bebry helped fixed entire social media icons for desktop mode. had to make main logo div slightly bigger and had to realign everything. removed .social which was appearing in many diff spots. mobile and desktop versions are perfect. tablet needs to be fixed still.

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -144,17 +144,16 @@ div.large-4.columns.sidebar{
 	/* margin-top: 34.2rem; */
 }
 
-.about-me{
-padding-left: 66px;
-padding-right: 0px;
+.about-me {
+padding-left: 46px;
+padding-right: 5px;
 margin-bottom: 3rem;
 margin-left: 0rem;
 margin-top: 2rem;
-
 }
 
 .twitter {
-margin-left: 3.2rem;
+margin-left: 2rem;
 margin-bottom: 0;
 padding-right: 2rem;
 
@@ -164,7 +163,7 @@ padding-right: 2rem;
 margin-top: 10rem;
 padding-left: 15px;
 padding-right:2rem;
-margin-left:3.2rem;
+margin-left:2rem;
 }
 
 /*.social {
@@ -173,21 +172,26 @@ margin-left:3.2rem;
 } */
 
 .social {
-   	width: 11rem;
-	padding-right: 0;
+   	/* width: 11rem; */
+	/* padding-right: 0; */
 	margin-top: .6rem;
 	margin-bottom: 4px;
+	text-align: right;
 }
 
-
+.icons{
+	margin-bottom: 0rem;
+	display: inline-block;
+}
 
 .search {
 	padding-right: 5px;
-    margin-left: 4px;
+    /* margin-left: 4px; */
 }
 
 ul.inline-list.social {
-	margin-left:0;
+	/* margin-left:0;
+	margin-right: 1rem; */
 }
 
 .logo{
@@ -195,8 +199,8 @@ ul.inline-list.social {
 }
 
 div.row.third {
-    float: right;
- 	margin-left: -10px;
+    /* float: right;
+     	margin-left: -10px; */
 }
 
 iframe#twitter-widget-1.twitter-timeline.twitter-timeline-rendered {
@@ -255,11 +259,12 @@ div.adsense{
 
 .facebook-like iframe{
 	border: none;
-	overflow: hidden;
 	height: 21px;
-	margin-left: 58px;
+/* 	margin-left: 58px; */
 	margin-top: 8px;
 	margin-bottom: 0px;
+
+	
 
 }
 
@@ -655,9 +660,10 @@ margin-bottom: 2rem;
  */
 
 .stumble{
-width: 20%;
-margin-left: -28px;
+/* width: 20%;
+margin-left: -28px; */
 margin-top: 8px;
+margin-left: 25px;
 }
 
 .stumble iframe {
@@ -670,19 +676,63 @@ margin-top: 8px;
 }
 
 .facebook-like{
-
-width: 101%;
-margin-left: -5rem;
+overflow: hidden;
+margin-right:-28px;
+padding-left: 0;
+/* width: 101%;
+margin-left: -5rem; */
 }
 
 .facebook-like iframe {
-overflow: hidden;
-margin-left: 45px;
+/* margin-left: 45px; */
 margin-top: 7px;
 margin-bottom: -2px;
+
 }
 
  @media only screen and (min-width: 40.063em) and (max-width: 64em) {
+
+
+.icons{
+	margin-bottom: 0rem;
+	display: inline-block;
+}
+
+
+.facebook-like{
+overflow: hidden;
+margin-right:-28px;
+padding-left: 0;
+/* width: 101%;
+margin-left: -5rem; */
+}
+
+.facebook-like iframe {
+/* margin-left: 45px; */
+margin-top: 7px;
+margin-bottom: -2px;
+
+}
+
+
+.stumble{
+/* width: 20%;
+margin-left: -28px; */
+margin-top: 8px;
+margin-left: 25px;
+}
+
+.stumble iframe {
+	overflow: hidden;
+	margin: 0px;
+	padding: 0px;
+	border: 0px;
+	margin-left: -2rem;
+	margin-top: 8px;
+}
+
+
+
 
 
 section.post-content img {
@@ -799,10 +849,11 @@ p.excerpt-paragraph {
 }
 
 .social {
-width: 11rem;
+/* width: 11rem; */
 padding-right: 0;
 margin-right: 2rem;
 margin-top: 2px;
+text-align: right;
 }
 
 div.large-12.columns.social  {
@@ -1055,8 +1106,8 @@ font-size: 16px;
 }
 
 ul.inline-list.social{
-margin-right: 2rem;
-margin-bottom: 0px;
+/* margin-right: 2rem;
+margin-bottom: 0px; */
 }
 
 
@@ -1207,7 +1258,7 @@ display: inherit;
 } */
  
 .social {
-width: 11rem;
+/* width: 11rem; */
 padding-right: 0;
 margin-top: 0;
 }
@@ -1241,7 +1292,7 @@ margin-bottom: -4rem;
 }
 
 .social {
-width: 11rem;
+/* width: 11rem; */
 padding-right: 0;
 margin-top: -.5rem;
 }
@@ -1282,7 +1333,7 @@ a.about-me {
  */
 
 ul.inline-list.social {
- margin-left: -1rem; 
+/*  margin-left: -1rem;  */
 }
 
 section.post-content p {
@@ -1299,10 +1350,9 @@ display: block;
 }
 
 div.row.third {
-max-width: 2rem;
-margin-right: 10rem;
-margin-left: 0rem;
-float:right;
+margin-right: 0rem;
+float: right;
+margin-bottom: -1rem;
 }
 
 .twitter {
